--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,7 @@
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
     %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.jplayer.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jplayer.playlist.min.js'}"}
+    %script{type: "text/javascript", src: "#{url_for "/js/masonry.pkgd.js"}"}
   %body
     %div.navbar.navbar-default.navbar-fixed-top
       %div.container
@@ -60,4 +61,10 @@
   function endsWith(str, suffix) {
     return str.indexOf(suffix, str.length - suffix.length) !== -1;
   }
+  var container = document.querySelector('.container');
+  var msnry = new Masonry( container, {
+    // options
+    columnWidth: 200,
+    itemSelector: '.item'
+  });
 
