--- a/views/layout.haml
+++ b/views/layout.haml
@@ -23,6 +23,7 @@
           %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
             .form-group
               %input.form-control{type: "TEXT", id: "q", name: "q"}
+            %span.jp_current_track_title
     %div.container#content
       =yield
     %div.container
