--- a/views/album.haml
+++ b/views/album.haml
@@ -51,7 +51,7 @@
  
 :javascript
     document.getElementById("content").style.background="url('#{url_for "/images/" + album.image_path}')";
-    document.getElementById("content").style.backgroundSize="500px 500px";
+    document.getElementById("content").style.backgroundSize="auto 500px";
     document.getElementById("content").style.backgroundPosition="0px 50px";
     document.getElementById("content").style.backgroundRepeat="no-repeat";
     //document.getElementById("content").style.minHeight="900px";
