--- a/views/artist.haml
+++ b/views/artist.haml
@@ -4,3 +4,8 @@
   -artist.albums.each do |album|
     %a.item{href: "#{url_for("/album/#{album.id}")}"}
       %img{src: "/images/#{album.image_path}"}
+
+.edit
+  %a.item{href: "#{url_for("/admin/artist/#{artist.id}")}"}
+    Edit
+  
