--- a/views/album.haml
+++ b/views/album.haml
@@ -48,6 +48,9 @@
       %span
         Update Required
       To play the media you will need to either update your browser to a recent version
+  .edit
+    %a.item{href: "#{url_for("/admin/album/#{album.id}")}"}
+      Edit
 :javascript
     document.getElementById("content").style.background="url('#{url_for "/images/" + album.image_path}')";
     document.getElementById("content").style.backgroundSize="auto 500px";
