--- a/views/search.haml
+++ b/views/search.haml
@@ -2,12 +2,12 @@
   Artists
 -artists.each do |artist|
   %a.item{href: "#{url_for "/artist/#{artist.id}"}"}
-    %img{src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+    %img{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
 %h3
   Albums
 -albums.each do |album|
   %a.item{href: "#{url_for "/album/#{album.id}"}"}
-    %img{src: "#{url_for "/images/#{album.image_path}"}"}
+    %img{title: "#{album.title}", src: "#{url_for "/images/#{album.image_path}"}"}
 :javascript
   var container = document.querySelector('.container');
   var msnry = new Masonry( container, {
