--- a/views/upload.haml
+++ b/views/upload.haml
@@ -1,3 +1,7 @@
 %form{action:"#{url_for("/upload")}", enctype:"multipart/form-data", method:"post"}
   %input{type:"file",name:"images[]",multiple:"true"}
   %input{type:"submit", value:"upload"}
+
+-unless params["info"].nil?
+  .text
+    =params["info"]
