--- a/views/upload.html.haml
+++ b/views/upload.html.haml
@@ -1,6 +1,18 @@
 %form{action:"#{url_for("/upload")}", enctype:"multipart/form-data", method:"post"}
-  %input{type:"file",name:"images[]",multiple:"true"}
-  %input{type:"submit", value:"upload"}
+  .input-group
+    %span.input-group-addon
+      files
+    %input.form-control{type:"file",name:"images[]",multiple:"true"}
+  .input-group
+    %span.input-group-addon
+      Artist
+    %input{type:"text", name: "artist_name"}
+  .input-group
+    %span.input-group-addon
+      Album
+    %input{type:"text", name: "album_name"}
+  .input-group
+    %input{type:"submit", value:"upload"}
 
 -unless params["info"].nil?
   .text
