--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -7,7 +7,7 @@
     %meta{:name => "viewport", :content=>"width=device-width, initial-scale=1, maximum-scale=1"}
     %meta{:name=>"apple-mobile-web-app-capable", :content=>"yes"}
     %script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"}
-    <!--%link{:rel => "stylesheet", :href => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/themes/base/jquery-ui.css", :type => "text/css"}-->
+    <!--%link{:rel => "stylesheet", :href => "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css", :type => "text/css"}-->
     %link{:rel => "stylesheet", :href => "http://fonts.googleapis.com/css?family=Cabin", :type => "text/css", :media => "all"}
     <!--%link{:rel => "stylesheet", :href => "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css", :type => "text/css"}-->
     %link{:rel => "stylesheet", :href => "#{url_for '/css/bootstrap/3.1.1/bootstrap.min.css'}", :type => "text/css"}
@@ -15,6 +15,7 @@
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
     %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.jplayer.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jplayer.playlist.min.js'}"}
+    %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.foggy.js'}"}
     %script{type: "text/javascript", src: "#{url_for "/js/masonry.pkgd.js"}"}
   %body
     %div.navbar.navbar-default.navbar-fixed-top
@@ -31,6 +32,14 @@
         %div.twelvecol
           %div.container.footer
 :javascript
+  $('.artist,.album').hover(
+    function(){
+      $(this).foggy();
+    }, 
+    function(){
+      $(this).foggy(false);
+    }
+  );
   $('#reload').bind('click', function() {
     document.title = 'Random Albums';
     if(!endsWith(document.location.toString(), "#{@host}" + '/')){
