--- a/views/search.html.haml
+++ b/views/search.html.haml
@@ -2,12 +2,12 @@
   Artists
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
   %a.item{href: "#{url_for "/artist/#{artist.id}"}"}
-    %img{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+    %img.artist{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
 %h3
   Albums
 -albums.to_a.select{|album| album.tracks.size > 0}.each do |album|
   %a.item{href: "#{url_for "/album/#{album.id}"}"}
-    %img{title: "#{album.title}", src: "#{url_for "/images/#{album.image_path}"}"}
+    %img.album{title: "#{album.title}", src: "#{url_for "/images/#{album.image_path}"}"}
 :javascript
   var container = document.querySelector('.container');
   var msnry = new Masonry( container, {
