--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,4 +1,11 @@
 -artists.to_a.select{|artist| artist.albums.size > 0}.each do |artist|
   %a.item{href: "#{url_for "/artist/#{artist.id}"}"}
-    %img.artist{title: "#{artist.name}", src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+    %img.artist{src: "#{url_for "/images/artists/#{artist.image_path}"}"}
+:javascript
+  var container = document.querySelector('.container');
+  var msnry = new Masonry( container, {
+    // options
+    columnWidth: 200,
+    itemSelector: '.item'
+  });
   
