--- a/views/playlist.html.haml
+++ b/views/playlist.html.haml
@@ -52,6 +52,10 @@
     %a.item{href: "#{url_for("/admin/playlist/#{playlist.id}")}"}
       Edit
 :javascript
+        document.getElementById("content").style.background="url('#{url_for "/images/" + (playlist.image_path || "")}')";
+        document.getElementById("content").style.backgroundPosition="0px 55px";
+        document.getElementById("content").style.backgroundSize="contain";
+        document.getElementById("content").style.backgroundRepeat="no-repeat";
         //document.getElementById("content").style.minHeight="900px";
 
     var timer;
