add autofocus to search field

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -24,7 +24,7 @@
         %div.navbar-header
           %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
             .form-group
-              %input.form-control{type: "TEXT", id: "q", name: "q"}
+              %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true}
             %span.jp_current_track_title
     %div.container#content
       =yield
