--- a/views/playlists.html.haml
+++ b/views/playlists.html.haml
@@ -7,4 +7,11 @@
         =playlist.name
       %a.form-control{href: "#{url_for("/admin/playlist/#{playlist.id}")}"}
         Edit
+%form{method: "POST", action:"#{url_for("/playlists/new")}"}
+  .input-group.input-group-lg
+    %span.input-group-addon
+      New Playlist
+    %input.form-control{type:"text", name:"name"}
+  .submit
+    %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
   
