switched autosuggest to a model

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -78,6 +78,8 @@
   $('#q').autocomplete({
     serviceUrl: '#{url_for "/livesearch"}',
     paramName: 'q',
-    minChars: 3
+    minChars: 1,
+    lookupLimit: 50,
+    autoSelectFirst: true,
   })
 
