disable autocomplete for track lookups

--- a/views/tracks.html.haml
+++ b/views/tracks.html.haml
@@ -23,3 +23,6 @@
 :javascript
   $('#search').prop('action', "#{url_for('/tracks')}");
   $('.navbar-info').html("#{tracks.count} tracks");
+  $(document).ready(function() {
+    $('#q').autocomplete('disable');
+  });
