--- a/views/admin/album.html.haml
+++ b/views/admin/album.html.haml
@@ -1,3 +1,4 @@
+%a{href: "#{url_for("/artist/#{model.artist.id}")}"}
 %a{href: "#{url_for("/#{model.class.to_s.downcase}/#{model.id}")}"}
   =model.to_s
 %form{method: "POST", action:"#{url_for("/admin/#{model.class.to_s.downcase}/#{model.id}")}"}
