--- a/views/album.html.haml
+++ b/views/album.html.haml
@@ -91,11 +91,13 @@
             playlist = myPlaylist.playlist;
         $.each(playlist, function (index, obj) {
             if (index == current) {
-              $('.navbar-info').html("                        \
+              $('.navbar-info').html("                                   \
                 <a href='#{url_for("/artist/#{album.artist.id}")}'>      \
                   <span class='artist-title'>#{album.artist.name}</span> \
                 </a>>                                                    \
-                <span class='album-title'>#{album.title}</span> >         \
+                <a href='#{url_for("/album/#{album.id}")}'>              \
+                  <span class='album-title'>#{album.title}</span>        \
+                </a>>                                                    \
                 <span class='track-title'>" + obj.title + "</span>");
             }
         });
@@ -106,6 +108,8 @@
         <a href='#{url_for("/artist/#{album.artist.id}")}'>      \
           <span class='artist-title'>#{album.artist.name}</span> \
         </a>>                                                    \
-        <span class='album-title'>#{album.title}</span>");
+        <a href='#{url_for("/album/#{album.id}")}'>      \
+          <span class='album-title'>#{album.title}</span> \
+        </a>");
     });
 
