--- a/views/admin/playlist.html.haml
+++ b/views/admin/playlist.html.haml
@@ -9,7 +9,7 @@
   .input-group.input-group-lg
     %span.input-group-addon
       add track
-    %input.form-control{type:"text", name:"track_id"}
+    %input.form-control{type:"text", name:"track_name", id:"track"}
   .submit
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
 %img{src: "#{url_for("/images/#{model.image_path}")}"}
@@ -31,3 +31,11 @@
         &nbsp;
       %span.form-control
         #{track.title}
+:javascript
+  $('#track').autocomplete({
+    serviceUrl: '#{url_for "/searchtracks"}',
+    paramName: 'q',
+    minChars: 1,
+    lookupLimit: 50,
+    autoSelectFirst: true,
+  });
