move stream tracking to ajax call

--- a/views/album.html.haml
+++ b/views/album.html.haml
@@ -91,6 +91,7 @@
             playlist = myPlaylist.playlist;
         $.each(playlist, function (index, obj) {
             if (index == current) {
+              $.ajax({type: "GET", url: obj.mp3.replace("stream","log")});
               $('.navbar-info').html("                                   \
                 <a href='#{url_for("/artist/#{album.artist.id}")}'>      \
                   <span class='artist-title'>#{album.artist.name}</span> \
