--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -29,10 +29,13 @@
             %span.navbar-info
     %div.container#content
       =yield
-    %div.container
       %div.row
         %div.twelvecol
           %div.container.footer
+            A 
+            %a{href:"http://patf.net"}
+              patf
+            joint
 :javascript
   $('.item').hover(
     function(){
