--- a/views/admin/model.html.haml
+++ b/views/admin/model.html.haml
@@ -1,3 +1,6 @@
+-if !model.album.nil?
+  %a{href: "#{url_for("/album/#{model.album.id}")}"}
+    =model.album.title
 %form{method: "POST", action:"#{url_for("/admin/#{model.class.to_s.downcase}/#{model.id}")}"}
   -model.editable_attributes.each do |k,v|
     .input-group.input-group-lg
