--- a/views/tracks.html.haml
+++ b/views/tracks.html.haml
@@ -1,25 +1,79 @@
-%table.table
-  %thead
-    %th
-      Title (id)
-    %th
-      Artist (id)
-    %th
-      Album (id)
-  %tbody
-    -tracks.each do |track|
-      %tr
-        %td
-          %a{href: "#{url_for("/admin/track/#{track.id}")}"}
-            #{track.title} (#{track.id})
-        %td
-          -unless track.album.nil? || track.album.artist.nil?
-            %a{href: "#{url_for("/artist/#{track.album.artist.id}")}"}
-              #{track.album.artist.name} (#{track.album.artist.id})
-        %td
-          -unless track.album.nil?
-            %a{href: "#{url_for("/album/#{track.album.id}")}"}
-              #{track.album.title} (#{track.album.id})
+%div.container#content2
+  .row
+    .col-xs-6
+      %table.table
+        %thead
+          %th
+            Title (id)
+          %th
+            Artist (id)
+          %th
+            Album (id)
+        %tbody
+          -tracks.each do |track|
+            %tr
+              %td
+                %a{href: "#{url_for("/admin/track/#{track.id}")}"}
+                  #{track.title} (#{track.id})
+              %td
+                -unless track.album.nil? || track.album.artist.nil?
+                  %a{href: "#{url_for("/artist/#{track.album.artist.id}")}"}
+                    #{track.album.artist.name} (#{track.album.artist.id})
+              %td
+                -unless track.album.nil?
+                  %a{href: "#{url_for("/album/#{track.album.id}")}"}
+                    #{track.album.title} (#{track.album.id})
+    .col-xs-6
+      #jquery_jplayer_1.jp-jplayer
+      #jp_container_1.jp-audio
+        .jp-type-playlist
+          .jp-gui.jp-interface
+            %ul.jp-controls
+              %li
+                %a.jp-previous{:href=>'javascript:;', :tabindex => '1'}
+                  previous
+              %li
+                %a.jp-play{:href=>'javascript:;', :tabindex => '1'}
+                  play
+              %li
+                %a.jp-pause{:href=>'javascript:;', :tabindex => '1'}
+                  pause
+              %li
+                %a.jp-next{:href=>'javascript:;', :tabindex => '1'}
+                  next
+              %li
+                %a.jp-stop{:href=>'javascript:;', :tabindex => '1'}
+                  stop
+              %li
+                %a.jp-mute{:href=>'javascript:;', :tabindex => '1'}
+                  mute
+              %li
+                %a.jp-unmute{:href=>'javascript:;', :tabindex => '1'}
+                  unmute
+              %li
+                %a.jp-volume-max{:href=>'javascript:;', :tabindex=>'1'}
+                  max volume
+            %div.jp-progress
+              %div.jp-seek-bar
+                %div.jp-play-bar
+            %div.jp-volume-bar
+              %div.jp-volume-bar-value
+            %div.jp-current-time
+            %div.jp-duration
+            %ul.jp-toggles
+              %li
+                %a.jp-repeat{:href=>"javascript:;", :tabindex=>'1'}
+                  repeat
+              %li
+                %a.jp-repeat-off{:href=>"javascript:;", :tabindex=>'1'}
+                  repeat-off
+          %div.jp-playlist
+            %ul
+              %li
+          %div.jp-no-solution
+            %span
+              Update Required
+              To play the media you will need to either update your browser to a recent version
 :javascript
   $('#search').prop('action', "#{url_for('/tracks')}");
   $('.navbar-info').html("#{tracks.count} tracks");
