playlist on track search

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -21,12 +21,14 @@
     <!--%script{type: "text/javascript", src: "#{url_for "/js/masonry-horizontal.js"}"}-->
   %body
     %div.navbar.navbar-default.navbar-fixed-top
-      %div.container
-        %div.navbar-header
+      %div.container-fluid
+        .nav.navbar-collapse.collapse
           %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
             .form-group
               %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true}
-            %span.navbar-info
+          %ul.nav.navbar-nav
+            %li
+              %span.navbar-info
     %div.container#content
       =yield
       %div.row
