masonry/bootstrap fluid issue

--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -21,7 +21,7 @@
     <!--%script{type: "text/javascript", src: "#{url_for "/js/masonry-horizontal.js"}"}-->
   %body
     %div.navbar.navbar-default.navbar-fixed-top
-      %div.container-fluid
+      %div.container
         .nav.navbar-collapse.collapse
           %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
             .form-group
