--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -29,7 +29,7 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href:"#"}
+        %a.navbar-brand{href:"#{url_for("/")}"}
           Bemused
       .collapse.navbar-collapse#navbar-collapse
         %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
