--- a/views/layout.html.haml
+++ b/views/layout.html.haml
@@ -14,6 +14,7 @@
     %link{:rel => "stylesheet", :href => "#{url_for '/blue.monday/jplayer.blue.monday.css'}", :type => "text/css" }
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
     %script{:type => "text/javascript", :src => "#{url_for '/js/bootstrap.min.js'}"}
+    %script{:type => "text/javascript", :src => "#{url_for '/js/isotope.pdgd.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.jplayer.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jplayer.playlist.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.foggy.js'}"}
