--- a/views/search.html.haml
+++ b/views/search.html.haml
@@ -9,9 +9,16 @@
   %a.item{href: "#{url_for "/album/#{album.id}"}"}
     %img.album{title: "#{album.title}", src: "#{url_for "/images/#{album.image_path}"}"}
 :javascript
-  var container = document.querySelector('.container');
-  var msnry = new Masonry( container, {
-    // options
-    columnWidth: 200,
-    itemSelector: '.item'
+  var $container = $('#container');
+  // init
+  $container.isotope({
+      // options
+        itemSelector: '.item',
+          layoutMode: 'fitRows'
   });
+  //var container = document.querySelector('.container');
+  //var msnry = new Masonry( container, {
+    // options
+  //  columnWidth: 1,
+  //  itemSelector: '.item'
+  //});
