--- a/views/search.html.haml
+++ b/views/search.html.haml
@@ -11,11 +11,14 @@
 :javascript
   var $container = $('#container');
   // init
-  $container.isotope({
-      // options
-        itemSelector: '.item',
-          layoutMode: 'fitRows'
+  $(document).ready( function() {
+    $container.isotope({
+        // options
+          itemSelector: '.item',
+            layoutMode: 'fitRows'
+    });
   });
+
   //var container = document.querySelector('.container');
   //var msnry = new Masonry( container, {
     // options
