--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -100,6 +100,7 @@
                   <span class='album-title'>#{album.title}</span>        \
                 </a>>                                                    \
                 <span class='track-title'>" + obj.title + "</span>");
+              $(document).title = obj.title;
             }
         });
     });
