--- a/app/views/playlist.html.haml
+++ b/app/views/playlist.html.haml
@@ -97,6 +97,7 @@
                   <span class='album-title'>#{playlist.name}</span> \
                 </a>>                                                    \
                 <span class='track-title'>" + obj.title + "</span>");
+              $(document).title = obj.title;
             }
         });
     });
