--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -18,6 +18,7 @@
     %script{:type => "text/javascript", :src => "#{url_for '/js/jquery.jplayer.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/js/jplayer.playlist.min.js'}"}
     %script{type: "text/javascript", src: "#{url_for "/js/masonry.pkgd.js"}"}
+    %script{type: "text/javascript", src: "#{url_for "/js/imagesLoaded.pkgd.min.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/js/autocomplete-1.2.9.js"}"}
     <!--%script{type: "text/javascript", src: "#{url_for "/js/masonry-horizontal.js"}"}-->
   %body
