--- a/app/views/radio.html.haml
+++ b/app/views/radio.html.haml
@@ -100,7 +100,7 @@
               $.ajax({type: "GET", url: obj.mp3.replace("stream","log")});
               $('.navbar-info').html("                                   \
                 <span class='track-title'>" + obj.title + "</span>");
-              $(document).title = obj.title;
+              $(document).prop("title", obj.title);
             }
         });
     });
